--- a/Comfizen/App.xaml
+++ b/Comfizen/App.xaml
@@ -1733,7 +1733,8 @@
                          AcceptsReturn="True" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" MaxHeight="100"
                          x:Name="MainTextBox" Padding="5,5,28,5"/>
                 <!-- UNDO/REDO BUTTONS -->
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,4,4,0">
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,4,4,0"
+                            Visibility="{Binding Source={x:Static local:SettingsService.Instance}, Path=Settings.ShowUndoRedoButtons, Converter={StaticResource BooleanToVisibilityConverter}}">
                     <Button Content="&#xE7A7;" Style="{StaticResource IconFontOverlayButton}"
                             Command="ApplicationCommands.Undo" CommandTarget="{Binding ElementName=MainTextBox}"
                             ToolTip="{local:Translate Toolbar_Undo}"/>
@@ -1755,7 +1756,8 @@
                          PreviewKeyDown="TextBox_PreviewKeyDown"
                          x:Name="AnyTypeTextBox" Padding="5,5,28,5"/>
                 <!-- UNDO/REDO BUTTONS -->
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,4,4,0">
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,4,4,0"
+                            Visibility="{Binding Source={x:Static local:SettingsService.Instance}, Path=Settings.ShowUndoRedoButtons, Converter={StaticResource BooleanToVisibilityConverter}}">
                     <Button Content="&#xE7A7;" Style="{StaticResource IconFontOverlayButton}"
                             Command="ApplicationCommands.Undo" CommandTarget="{Binding ElementName=AnyTypeTextBox}"
                             ToolTip="{local:Translate Toolbar_Undo}"/>
@@ -1785,12 +1787,15 @@
                     <!-- GROUPED BUTTONS -->
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,4,0">
                         <!-- UNDO/REDO BUTTONS -->
-                        <Button Content="&#xE7A7;" Style="{StaticResource IconFontOverlayButton}"
-                                Command="ApplicationCommands.Undo" CommandTarget="{Binding ElementName=WildcardTextBox}"
-                                ToolTip="{local:Translate Toolbar_Undo}"/>
-                        <Button Content="&#xE7A6;" Style="{StaticResource IconFontOverlayButton}"
-                                Command="ApplicationCommands.Redo" CommandTarget="{Binding ElementName=WildcardTextBox}"
-                                ToolTip="{local:Translate Toolbar_Redo}"/>
+                        <StackPanel Orientation="Horizontal"
+                                    Visibility="{Binding Source={x:Static local:SettingsService.Instance}, Path=Settings.ShowUndoRedoButtons, Converter={StaticResource BooleanToVisibilityConverter}}">
+                            <Button Content="&#xE7A7;" Style="{StaticResource IconFontOverlayButton}"
+                                    Command="ApplicationCommands.Undo" CommandTarget="{Binding ElementName=WildcardTextBox}"
+                                    ToolTip="{local:Translate Toolbar_Undo}"/>
+                            <Button Content="&#xE7A6;" Style="{StaticResource IconFontOverlayButton}"
+                                    Command="ApplicationCommands.Redo" CommandTarget="{Binding ElementName=WildcardTextBox}"
+                                    ToolTip="{local:Translate Toolbar_Redo}"/>
+                        </StackPanel>
                         <!-- WILDCARD BROWSER BUTTON -->
                         <Button Content="..." Style="{StaticResource OverlayIconButton}"
                                 ToolTip="{local:Translate Wildcard_Browse}"
